--- a/index.html
+++ b/index.html
@@ -10,14 +10,39 @@
     <header>
         <img src="logo.png" alt="Logo Ritmos de Sangre" class="logo">
         <h1>Bloque Ritmos de Sangre - Caporales Huáscar Perú</h1>
-        <p class="lema">Con Cariño Ritmos Ritmos RITMOS DE SANGRE -:HUASCÁR PERÚ</p>
+        <p class="lema">Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</p>
     </header>
+
     <main>
         <section>
             <h2>Bienvenidos</h2>
             <p>Somos una agrupación de danza juvenil comprometida con el arte y la cultura caporal. ¡Gracias por visitarnos!</p>
         </section>
+
+        <section class="galeria">
+            <h2>Galería de Fotos</h2>
+            <div class="imagenes">
+                <img src="foto1.jpg" alt="Presentación 1">
+                <img src="foto2.jpg" alt="Presentación 2">
+                <img src="foto3.jpg" alt="Presentación 3">
+            </div>
+        </section>
+
+        <section class="contacto">
+            <h2>Contacto</h2>
+            <p>¿Deseas invitarnos a un evento o unirte a la agrupación?</p>
+            <p>📧 ritmosdesangre@gmail.com</p>
+            <p>📱 +51 987 654 321</p>
+        </section>
+
+        <section class="redes">
+            <h2>Síguenos</h2>
+            <a href="https://www.facebook.com" target="_blank">Facebook</a> |
+            <a href="https://www.instagram.com" target="_blank">Instagram</a> |
+            <a href="https://www.tiktok.com" target="_blank">TikTok</a>
+        </section>
     </main>
+
     <footer>
         <p>&copy; 2025 Bloque Ritmos de Sangre - Todos los derechos reservados</p>
     </footer>
