--- a/index.html
+++ b/index.html
@@ -1,156 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bloque Ritmos de Sangre - Caporales Huáscar Perú</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      background-color: #f4f4f4;
-    }
-    header {
-      background-color: #7b1c2c;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      position: fixed;
-      width: 100%;
-      top: 0;
-      left: 0;
-      z-index: 1000;
-    }
-    .sidebar {
-      width: 220px;
-      background-color: #333;
-      color: white;
-      padding-top: 80px;
-      position: fixed;
-      height: 100%;
-      overflow-y: auto;
-    }
-    .sidebar ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    .sidebar li {
-      padding: 10px;
-      cursor: pointer;
-    }
-    .sidebar li:hover, .sidebar li.active {
-      background-color: #555;
-    }
-    .submenu {
-      display: none;
-      background-color: #444;
-    }
-    .submenu li {
-      padding-left: 20px;
-    }
-    main {
-      margin-left: 220px;
-      padding: 100px 20px 20px;
-      flex: 1;
-    }
-    section {
-      display: none;
-    }
-    section.active {
-      display: block;
-    }
-    .galeria img {
-      width: 180px;
-      margin: 10px;
-      border-radius: 10px;
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-    .galeria img:hover {
-      transform: scale(1.05);
-    }
-    .expanded-img {
-      display: block;
-      margin: 20px auto;
-      max-width: 90%;
-    }
-    footer {
-      background-color: #555;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <img src="logo.png" alt="Logo Ritmos de Sangre" style="max-height: 100px;">
-    <h1>Bloque Ritmos de Sangre - Caporales Huáscar Perú</h1>
-    <p>Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</p>
-  </header>
-  <div class="sidebar">
-    <ul>
-      <li onclick="mostrar('inicio')">Inicio</li>
-      <li onclick="mostrar('nosotros')">Nosotros</li>
-      <li onclick="mostrar('historia')">Historia</li>
-      <li onclick="mostrar('juntas')">Juntas Directivas</li>
-      <li onclick="toggleSubmenu('sedes')">Sedes</li>
-        <ul id="submenu-sedes" class="submenu">
-          <li onclick="mostrar('sede-puno')">Puno</li>
-          <li onclick="mostrar('sede-lima')">Lima</li>
-          <li onclick="mostrar('sede-arequipa')">Arequipa</li>
-          <li onclick="mostrar('sede-cusco')">Cusco</li>
-        </ul>
-      <li onclick="mostrar('galeria')">Galería de Fotos</li>
-      <li onclick="mostrar('contacto')">Contactos</li>
-      <li onclick="mostrar('redes')">Redes Sociales</li>
-    </ul>
-  </div>
-  <main>
-    <section id="inicio" class="active">Bienvenidos a nuestra agrupación de danza Caporales.</section>
-    <section id="nosotros">Somos jóvenes apasionados por la cultura y el folclore boliviano.</section>
-    <section id="historia">Nuestra historia comienza en Lima con el deseo de difundir el caporal con amor.</section>
-    <section id="juntas">Directivas organizadas desde el año 2020 hasta la actualidad.</section>
-    <section id="sede-puno">Nuestra sede en Puno está enfocada en la tradición y fe.</section>
-    <section id="sede-lima">Nuestra sede en Lima reúne jóvenes de diferentes distritos.</section>
-    <section id="sede-arequipa">En Arequipa promovemos la danza a través de talleres y ensayos.</section>
-    <section id="sede-cusco">Cusco vive el caporal con energía y pasión cultural.</section>
-    <section id="galeria" class="galeria">
-      <img src="foto1.jpg" alt="Foto 1" onclick="expandir(this.src)">
-      <img src="foto2.jpg" alt="Foto 2" onclick="expandir(this.src)">
-      <img src="foto3.jpg" alt="Foto 3" onclick="expandir(this.src)">
-      <img id="expandida" class="expanded-img" style="display:none" />
-    </section>
-    <section id="contacto">
-      Escríbenos a: <strong>ritmosdesangre@gmail.com</strong><br>
-      WhatsApp: <strong>+51 987 654 321</strong>
-    </section>
-    <section id="redes">
-      <a href="https://facebook.com">Facebook</a><br>
-      <a href="https://instagram.com">Instagram</a><br>
-      <a href="https://tiktok.com">TikTok</a>
-    </section>
-  </main>
-  <footer>
-    &copy; 2025 Bloque Ritmos de Sangre - Todos los derechos reservados
-  </footer>
-  <script>
-    function mostrar(id) {
-      document.querySelectorAll('main section').forEach(sec => sec.classList.remove('active'));
-      document.getElementById('expandida').style.display = 'none';
-      document.getElementById(id).classList.add('active');
-    }
-    function toggleSubmenu(id) {
-      const submenu = document.getElementById(`submenu-${id}`);
-      submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
-    }
-    function expandir(src) {
-      const expanded = document.getElementById('expandida');
-      expanded.src = src;
-      expanded.style.display = 'block';
-    }
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ritmos de Sangre - Caporales Huáscar Perú</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script defer src="app.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <aside class="sidebar">
+        <div class="logo">
+          <img src="logo.png" alt="Logo Ritmos de Sangre" />
+          <h1>Bloque Ritmos de Sangre</h1>
+          <p class="lema">Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</p>
+        </div>
+        <nav class="menu">
+          <ul>
+            <li onclick="mostrarSeccion('inicio')">Inicio</li>
+            <li onclick="mostrarSeccion('nosotros')">Nosotros</li>
+            <li onclick="mostrarSeccion('historia')">Historia</li>
+            <li onclick="mostrarSeccion('juntas')">Juntas Directivas</li>
+            <li class="has-submenu">
+              <span onclick="toggleSubmenu()">Sedes ▾</span>
+              <ul class="submenu">
+                <li onclick="mostrarSeccion('puno')">Puno</li>
+                <li onclick="mostrarSeccion('lima')">Lima</li>
+                <li onclick="mostrarSeccion('arequipa')">Arequipa</li>
+                <li onclick="mostrarSeccion('cusco')">Cusco</li>
+              </ul>
+            </li>
+            <li onclick="mostrarSeccion('galeria')">Galería de Fotos</li>
+            <li onclick="mostrarSeccion('contacto')">Contacto</li>
+            <li onclick="mostrarSeccion('redes')">Redes Sociales</li>
+          </ul>
+        </nav>
+      </aside>
+      <main class="contenido">
+        <section id="inicio"><h2>Inicio</h2><p>Bienvenidos a nuestra agrupación de danza Caporales Huáscar Perú.</p></section>
+        <section id="nosotros"><h2>Nosotros</h2><p>Somos una familia unida por la danza y el folclore.</p></section>
+        <section id="historia"><h2>Historia</h2><p>Desde nuestros inicios hemos llevado alegría a cada escenario.</p></section>
+        <section id="juntas"><h2>Juntas Directivas</h2><p>Directivas organizadas desde el año 2020.</p></section>
+        <section id="puno"><h2>Sede Puno</h2><p>Representamos con orgullo la fe y tradición puneña.</p></section>
+        <section id="lima"><h2>Sede Lima</h2><p>Reunimos jóvenes de diferentes distritos de la capital.</p></section>
+        <section id="arequipa"><h2>Sede Arequipa</h2><p>Promovemos la danza con pasión y constancia.</p></section>
+        <section id="cusco"><h2>Sede Cusco</h2><p>Cusco vive el caporal con alegría e identidad.</p></section>
+        <section id="galeria">
+          <h2>Galería de Fotos</h2>
+          <div class="galeria">
+            <img src="foto1.jpg" alt="Foto 1" onclick="expandirImagen(this)" />
+            <img src="foto2.jpg" alt="Foto 2" onclick="expandirImagen(this)" />
+            <img src="foto3.jpg" alt="Foto 3" onclick="expandirImagen(this)" />
+          </div>
+        </section>
+        <section id="contacto"><h2>Contacto</h2><p>Correo: ritmosdesangre@gmail.com<br>WhatsApp: +51 987 654 321</p></section>
+        <section id="redes">
+          <h2>Redes Sociales</h2>
+          <p>
+            <a href="https://facebook.com" target="_blank">Facebook</a><br>
+            <a href="https://instagram.com" target="_blank">Instagram</a><br>
+            <a href="https://tiktok.com" target="_blank">TikTok</a>
+          </p>
+        </section>
+      </main>
+      <div id="modal" class="modal" onclick="cerrarModal()">
+        <img id="imagenExpandida" src="" alt="Expandida" />
+      </div>
+    </div>
+  </body>
 </html>
