--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section id="redes">
           <h2>Redes Sociales</h2>
           <p>
-            <a href="https://facebook.com" target="_blank">Facebook</a><br>
+            <a href="https://web.facebook.com/profile.php?id=100086497332123" target="_blank">Facebook</a><br>
             <a href="https://instagram.com" target="_blank">Instagram</a><br>
             <a href="https://tiktok.com" target="_blank">TikTok</a>
           </p>
