--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <img src="foto6.jpg" alt="Foto 6" onclick="expandirImagen(this)" />
           </div>
         </section>
-        <section id="contacto"><h2>Contacto</h2><p>Correo: ritmosdesangre@gmail.com<br>WhatsApp: +51 987 654 321</p></section>
+        <section id="contacto"><h2>Contacto</h2><p>Correo: chritmosdesangre@gmail.com<br>WhatsApp: +51 913 478 401</p></section>
         <section id="redes">
           <h2>Redes Sociales</h2>
           <p>
             <a href="https://web.facebook.com/profile.php?id=100086497332123" target="_blank">Facebook</a><br>
-            <a href="https://instagram.com" target="_blank">Instagram</a><br>
-            <a href="https://tiktok.com" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/ritmosdesangrelima_chp/" target="_blank">Instagram</a><br>
+            <a href="https://www.tiktok.com/@ritmosdesangre_chp?_t=ZM-8wvdtAH5wl6&_r=1" target="_blank">TikTok</a>
           </p>
         </section>
       </main>
