--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ritmos de Sangre - Caporales Huáscar Perú</title>
+    <title>Ritmos de Sangre Lima - Caporales Huáscar Perú</title>
     <link rel="stylesheet" href="styles.css" />
     <script defer src="app.js"></script>
   </head>
@@ -11,7 +11,7 @@
     <div class="container">
       <aside class="sidebar">
         <div class="logo">
-          <img src="logo.png" alt="Logo Ritmos de Sangre" />
+          <img src="logo.png" alt="Logo Ritmos de Sangre Lima" />
           <h1>Bloque Ritmos de Sangre</h1>
           <p class="lema">Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</p>
         </div>
@@ -25,7 +25,6 @@
               <span onclick="toggleSubmenu()">Sedes ▾</span>
               <ul class="submenu">
                 <li onclick="mostrarSeccion('puno')">Puno</li>
-                <li onclick="mostrarSeccion('lima')">Lima</li>
                 <li onclick="mostrarSeccion('arequipa')">Arequipa</li>
                 <li onclick="mostrarSeccion('cusco')">Cusco</li>
               </ul>
@@ -42,7 +41,6 @@
         <section id="historia"><h2>Historia</h2><p>Desde nuestros inicios hemos llevado alegría a cada escenario.</p></section>
         <section id="juntas"><h2>Juntas Directivas</h2><p>Directivas organizadas desde el año 2020.</p></section>
         <section id="puno"><h2>Sede Puno</h2><p>Representamos con orgullo la fe y tradición puneña.</p></section>
-        <section id="lima"><h2>Sede Lima</h2><p>Reunimos jóvenes de diferentes distritos de la capital.</p></section>
         <section id="arequipa"><h2>Sede Arequipa</h2><p>Promovemos la danza con pasión y constancia.</p></section>
         <section id="cusco"><h2>Sede Cusco</h2><p>Cusco vive el caporal con alegría e identidad.</p></section>
         <section id="galeria">
