--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <aside class="sidebar">
         <div class="logo">
           <img src="logo.png" alt="Logo Ritmos de Sangre Lima" />
-          <h1>Bloque Ritmos de Sangre</h1>
+          <h1>Bloque Ritmos de Sangre Lima</h1>
           <p class="lema">Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</p>
         </div>
         <nav class="menu">
