--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -8,8 +9,9 @@
     <script defer src="app.js"></script>
   </head>
   <body>
+    <div class="hamburger" id="hamburger">&#9776;</div>
     <div class="container">
-      <aside class="sidebar">
+      <aside class="sidebar hidden">
         <div class="logo">
           <img src="logo.png" alt="Logo Ritmos de Sangre Lima" />
           <h1>Bloque Ritmos de Sangre Lima</h1>
