--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -9,7 +8,7 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <div class="hamburger" id="hamburger">&#9776;</div>
+    <div id="hamburger" class="hamburger">☰</div>
     <div class="container">
       <aside class="sidebar hidden">
         <div class="logo">
