--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <div id="hamburger" class="hamburger">☰</div>
     <div class="container">
-      <aside class="sidebar hidden">
+      <aside class="sidebar">
         <div class="logo">
           <img src="logo.png" alt="Logo Ritmos de Sangre Lima" />
           <h1>Bloque Ritmos de Sangre Lima</h1>
-          <p class="lema">Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</p>
+          <p class="lema"><em>Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</em></p>
         </div>
         <nav class="menu">
           <ul>
