--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
           <img src="logo.png" alt="Logo Ritmos de Sangre" />
           <h1>Bloque Ritmos de Sangre</h1>
-          <p class="lema">Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</p>
+           <p class="lema"><em>Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</em></p>
         </div>
         <nav class="menu">
           <ul>
