--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <img src="foto1.jpg" alt="Foto 1" onclick="expandirImagen(this)" />
             <img src="foto2.jpg" alt="Foto 2" onclick="expandirImagen(this)" />
             <img src="foto3.jpg" alt="Foto 3" onclick="expandirImagen(this)" />
+            <img src="foto4.jpg" alt="Foto 4" onclick="expandirImagen(this)" />
+            <img src="foto5.jpg" alt="Foto 5" onclick="expandirImagen(this)" />
+            <img src="foto6.jpg" alt="Foto 6" onclick="expandirImagen(this)" />
           </div>
         </section>
         <section id="contacto"><h2>Contacto</h2><p>Correo: ritmosdesangre@gmail.com<br>WhatsApp: +51 987 654 321</p></section>
