--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <main class="contenido">
         <section id="inicio"><h2>Inicio</h2><p>Bienvenidos a nuestra agrupación de danza Caporales Huáscar Perú.</p></section>
-        <section id="nosotros"><h2>Nosotros</h2><p>Somos una familia unida por la danza y el folclore.
+        <section id="nosotros"><h2>Nosotros</h2><p style="text-align: justify;">Somos una familia unida por la danza y el folclore.
 El Bloque Ritmos de Sangre Lima nace del amor profundo por nuestras raíces, con el objetivo de preservar y difundir la riqueza cultural de nuestro país a través de la danza. Somos más que una agrupación: somos una hermandad que cree en el poder del arte para transformar, unir y emocionar.
 Nuestro bloque está conformado por personas de distintas edades, experiencias y trayectorias, pero con un mismo propósito: honrar la tradición caporal y fomentar el respeto, la disciplina y el compañerismo dentro y fuera del escenario.
 Nos caracteriza un estilo delicado y recatado, que respeta la esencia del caporal y le da vida con elegancia, fuerza y corazón. No usamos elementos que desvirtúen la estética ni el espíritu del folclore. Danzamos por amor al arte, por respeto a nuestra cultura y para honrar a la Virgen de la Candelaria, a quien rendimos homenaje con cada presentación.
