--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ritmos de Sangre - Caporales Huáscar Perú</title>
+    <title>Ritmos de Sangre Lima - Caporales Huáscar Perú</title>
     <link rel="stylesheet" href="styles.css" />
     <script defer src="app.js"></script>
   </head>
@@ -12,7 +12,7 @@
       <aside class="sidebar">
         <div class="logo">
           <img src="logo.png" alt="Logo Ritmos de Sangre" />
-          <h1>Bloque Ritmos de Sangre</h1>
+          <h1>Bloque Ritmos de Sangre Lima - Caporales Huáscar Perú</h1>
            <p class="lema"><em>Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</em></p>
         </div>
         <nav class="menu">
@@ -25,7 +25,6 @@
               <span onclick="toggleSubmenu()">Sedes ▾</span>
               <ul class="submenu">
                 <li onclick="mostrarSeccion('puno')">Puno</li>
-                <li onclick="mostrarSeccion('lima')">Lima</li>
                 <li onclick="mostrarSeccion('arequipa')">Arequipa</li>
                 <li onclick="mostrarSeccion('cusco')">Cusco</li>
               </ul>
@@ -50,7 +49,6 @@ En Ritmos de Sangre, creemos en la constancia, en el respeto por quienes nos abr
         <section id="historia"><h2>Historia</h2><p>Desde nuestros inicios hemos llevado alegría a cada escenario.</p></section>
         <section id="juntas"><h2>Juntas Directivas</h2><p>Directivas organizadas desde el año 2020.</p></section>
         <section id="puno"><h2>Sede Puno</h2><p>Representamos con orgullo la fe y tradición puneña.</p></section>
-        <section id="lima"><h2>Sede Lima</h2><p>Reunimos jóvenes de diferentes distritos de la capital.</p></section>
         <section id="arequipa"><h2>Sede Arequipa</h2><p>Promovemos la danza con pasión y constancia.</p></section>
         <section id="cusco"><h2>Sede Cusco</h2><p>Cusco vive el caporal con alegría e identidad.</p></section>
         <section id="galeria">
@@ -64,13 +62,13 @@ En Ritmos de Sangre, creemos en la constancia, en el respeto por quienes nos abr
             <img src="foto6.jpg" alt="Foto 6" onclick="expandirImagen(this)" />
           </div>
         </section>
-        <section id="contacto"><h2>Contacto</h2><p>Correo: ritmosdesangre@gmail.com<br>WhatsApp: +51 987 654 321</p></section>
+        <section id="contacto"><h2>Contacto</h2><p>Correo: chritmosdesangre@gmail.com<br>WhatsApp: +51 983 787 797</p></section>
         <section id="redes">
           <h2>Redes Sociales</h2>
           <p>
-            <a href="https://facebook.com" target="_blank">Facebook</a><br>
-            <a href="https://instagram.com" target="_blank">Instagram</a><br>
-            <a href="https://tiktok.com" target="_blank">TikTok</a>
+            <a href="https://www.facebook.com/profile.php?id=100086497332123" target="_blank">Facebook</a><br>
+            <a href="https://www.instagram.com/ritmosdesangrelima_chp/" target="_blank">Instagram</a><br>
+            <a href="https://www.tiktok.com/@ritmosdesangre_chp" target="_blank">TikTok</a>
           </p>
         </section>
       </main>
