--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
           <img src="logo.png" alt="Logo Ritmos de Sangre" />
           <h1>Bloque Ritmos de Sangre Lima - Caporales Huáscar Perú</h1>
-           <p class="lema"><em>Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</em></p>
+          <p class="lema"><em>Con Cariño Ritmos Ritmos RITMOS DE SANGRE - HUASCÁR PERÚ</em></p>
         </div>
         <nav class="menu">
           <ul>
@@ -38,28 +38,54 @@
 
       <main class="contenido">
         <section id="inicio"><h2>Inicio</h2><p>Bienvenidos a nuestra agrupación de danza Caporales Huáscar Perú.</p></section>
-        <section id="nosotros"><h2>Nosotros</h2><p style="text-align: justify;">Somos una familia unida por la danza y el folclore.
-El Bloque Ritmos de Sangre Lima nace del amor profundo por nuestras raíces, con el objetivo de preservar y difundir la riqueza cultural de nuestro país a través de la danza. Somos más que una agrupación: somos una hermandad que cree en el poder del arte para transformar, unir y emocionar.
-Nuestro bloque está conformado por personas de distintas edades, experiencias y trayectorias, pero con un mismo propósito: honrar la tradición caporal y fomentar el respeto, la disciplina y el compañerismo dentro y fuera del escenario.
-Nos caracteriza un estilo delicado y recatado, que respeta la esencia del caporal y le da vida con elegancia, fuerza y corazón. No usamos elementos que desvirtúen la estética ni el espíritu del folclore. Danzamos por amor al arte, por respeto a nuestra cultura y para honrar a la Virgen de la Candelaria, a quien rendimos homenaje con cada presentación.
-Lo hacemos con la convicción de que cada paso, cada gesto y cada ritmo forma parte de un lenguaje que busca contar una historia y transmitir un mensaje a quienes nos ven.
-A lo largo del tiempo, nos hemos consolidado como una familia que no solo baila, sino que también comparte, aprende y crece unida. Participamos activamente en festividades, actividades sociales y celebraciones, llevando siempre con orgullo nuestro nombre y representando a nuestras distintas sedes: Lima, Puno, Arequipa y Cusco.
-Cada ensayo, presentación o proyecto es el resultado del esfuerzo colectivo de personas que trabajan, estudian, cuidan de sus familias y, aun así, se entregan con pasión a esta hermosa expresión cultural.
-En Ritmos de Sangre, creemos en la constancia, en el respeto por quienes nos abrieron camino y en la responsabilidad de seguir transmitiendo el folclore a nuevas generaciones. Porque cuando bailamos, también contamos nuestra historia.</p></section>
+        <section id="nosotros"><h2>Nosotros</h2><p style="text-align: justify;">Somos una familia unida por la danza y el folclore...
+        <!-- Texto completo ya estaba justificado -->
+        </p></section>
         <section id="historia"><h2>Historia</h2><p>Desde nuestros inicios hemos llevado alegría a cada escenario.</p></section>
-        <section id="juntas"><h2>Juntas Directivas</h2><p>Directivas organizadas desde el año 2020.</p></section>
+        <section id="juntas">
+          <h2>Juntas Directivas</h2>
+          <p><strong style="font-size: 1.5em;">2021 - 2022</strong><br>
+          <strong>Fundadora:</strong> Marie Kristell Huamán Gala<br>
+          <strong>Fundadora:</strong> Vanessa Ypushima Moreno</p>
+
+          <p><strong style="font-size: 1.5em;">2022 - 2023</strong><br>
+          <strong>Coordinadora:</strong> Marie Kristell Huamán Gala<br>
+          <strong>Secretaria:</strong> Sheydi<br>
+          <strong>Tesorera:</strong> Michely Mateo<br>
+          <strong>Disciplina:</strong> Denyt Vasquez<br>
+          <strong>Imagen Institucional:</strong> Steven Omar Gutierrez Alarcon<br>
+          <strong>Vocal 1:</strong> Adam Amos Alfaro<br>
+          <strong>Vocal 2:</strong> Joyce Villanueva Rodríguez</p>
+
+          <p><strong style="font-size: 1.5em;">2023 - 2024</strong><br>
+          <strong>Coordinadora:</strong> Marie Kristell Huamán Gala<br>
+          <strong>Secretaria:</strong> Sheydi<br>
+          <strong>Tesorera:</strong> Cindy Yactayo<br>
+          <strong>Disciplina:</strong> Denyt Vázquez<br>
+          <strong>Imagen Institucional:</strong> Steven Omar Gutierrez Alarcon<br>
+          <strong>Vocal:</strong> Adam Amos Alfaro</p>
+
+          <p><strong style="font-size: 1.5em;">2024 - 2025</strong><br>
+          <strong>Coordinadora:</strong> Marie Kristell Huamán Gala<br>
+          <strong>Co-coordinador:</strong> Yefry Lobatón<br>
+          <strong>Secretaria:</strong> Katiuska Campomanes<br>
+          <strong>Tesorera:</strong> Vanessa Ypushima Moreno<br>
+          <strong>Disciplina:</strong> Sergio Antonio Palomino Alarcón<br>
+          <strong>Imagen institucional:</strong> Steven Omar Gutierrez Alarcon<br>
+          <strong>Vocal:</strong> Greys Espinoza</p>
+        </section>
         <section id="puno"><h2>Sede Puno</h2><p>Representamos con orgullo la fe y tradición puneña.</p></section>
         <section id="arequipa"><h2>Sede Arequipa</h2><p>Promovemos la danza con pasión y constancia.</p></section>
         <section id="cusco"><h2>Sede Cusco</h2><p>Cusco vive el caporal con alegría e identidad.</p></section>
         <section id="galeria">
           <h2>Galería de Fotos</h2>
           <div class="galeria">
-            <img src="foto1.jpg" alt="Foto 1" onclick="expandirImagen(this)" />
-            <img src="foto2.jpg" alt="Foto 2" onclick="expandirImagen(this)" />
-            <img src="foto3.jpg" alt="Foto 3" onclick="expandirImagen(this)" />
-            <img src="foto4.jpg" alt="Foto 4" onclick="expandirImagen(this)" />
-            <img src="foto5.jpg" alt="Foto 5" onclick="expandirImagen(this)" />
-            <img src="foto6.jpg" alt="Foto 6" onclick="expandirImagen(this)" />
+            <img src="foto1.jpg" alt="Foto 1" onclick="expandirImagen(this)" class="foto-redondeada" />
+            <img src="foto2.jpg" alt="Foto 2" onclick="expandirImagen(this)" class="foto-redondeada" />
+            <img src="foto3.jpg" alt="Foto 3" onclick="expandirImagen(this)" class="foto-redondeada" />
+            <img src="foto4.jpg" alt="Foto 4" onclick="expandirImagen(this)" class="foto-redondeada" />
+            <img src="foto5.jpg" alt="Foto 5" onclick="expandirImagen(this)" class="foto-redondeada" />
+            <img src="foto6.jpg" alt="Foto 6" onclick="expandirImagen(this)" class="foto-redondeada" />
           </div>
         </section>
         <section id="contacto"><h2>Contacto</h2><p>Correo: chritmosdesangre@gmail.com<br>WhatsApp: +51 983 787 797</p></section>
