--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
 
       <main class="contenido">
         <section id="inicio"><h2>Inicio</h2><p>Bienvenidos a nuestra agrupación de danza Caporales Huáscar Perú.</p></section>
-        <section id="nosotros"><h2>Nosotros</h2><p style="text-align: justify;">Somos una familia unida por la danza y el folclore...
-        <!-- Texto completo ya estaba justificado -->
+        <section id="nosotros"><h2>Nosotros</h2><p style="text-align: justify;">Somos una familia unida por la danza y el folclore.
+El Bloque Ritmos de Sangre Lima nace del amor profundo por nuestras raíces, con el objetivo de preservar y difundir la riqueza cultural de nuestro país a través de la danza. Somos más que una agrupación: somos una hermandad que cree en el poder del arte para transformar, unir y emocionar.
+Nuestro bloque está conformado por personas de distintas edades, experiencias y trayectorias, pero con un mismo propósito: honrar la tradición caporal y fomentar el respeto, la disciplina y el compañerismo dentro y fuera del escenario.
+Nos caracteriza un estilo delicado y recatado, que respeta la esencia del caporal y le da vida con elegancia, fuerza y corazón. No usamos elementos que desvirtúen la estética ni el espíritu del folclore. Danzamos por amor al arte, por respeto a nuestra cultura y para honrar a la Virgen de la Candelaria, a quien rendimos homenaje con cada presentación.
+Lo hacemos con la convicción de que cada paso, cada gesto y cada ritmo forma parte de un lenguaje que busca contar una historia y transmitir un mensaje a quienes nos ven.
+A lo largo del tiempo, nos hemos consolidado como una familia que no solo baila, sino que también comparte, aprende y crece unida. Participamos activamente en festividades, actividades sociales y celebraciones, llevando siempre con orgullo nuestro nombre y representando a nuestras distintas sedes: Lima, Puno, Arequipa y Cusco.
+Cada ensayo, presentación o proyecto es el resultado del esfuerzo colectivo de personas que trabajan, estudian, cuidan de sus familias y, aun así, se entregan con pasión a esta hermosa expresión cultural.
+En Ritmos de Sangre, creemos en la constancia, en el respeto por quienes nos abrieron camino y en la responsabilidad de seguir transmitiendo el folclore a nuevas generaciones. Porque cuando bailamos, también contamos nuestra historia. 
         </p></section>
         <section id="historia"><h2>Historia</h2><p>Desde nuestros inicios hemos llevado alegría a cada escenario.</p></section>
         <section id="juntas">
